[bdist_wheel]
universal = 1

[metadata]
name = import-mocker
version = 0.2.0
author = Microsoft Corporation
license_file = LICENSE
description = Easily import a module and mock its dependencies in an isolated way.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/python-import-mocker
project_urls =
    Bug Tracker = https://github.com/microsoft/python-import-mocker/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
package_dir=
    = src
packages = find:
include_package_data = True
python_requires = >=3.5

[options.packages.find]
where=src

[tool:pytest]
testpaths = tests
pythonpath = src tests
python_functions = test_*
python_files = test_*.py
addopts = --cov=import_mocker --cov-report term-missing